bio updates, advisor added, about page edits

--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
     </div>
     <div class="banner-text-right">
       <h1 class="banner-header">Future Product Positioning</h1>
-      <h2 class="banner-sub">We empower our streaming partners to better understand and reach the growing medical cannabis market by leveraging our relationships and brand building expertise to place or create brands and products that resonate with patients.<br><br>As Canada moves towards an adult-use market, Cannabis Wheaton will continually innovate and build our streaming partners product offering to maintain brand and consumer loyalty.
+      <h2 class="banner-sub">We empower our streaming partners to better understand and reach the growing cannabis market by leveraging our relationships and brand building expertise to place or create brands and products that resonate with patients.<br><br>As Canada moves towards an adult-use market, Cannabis Wheaton will continually innovate and build our streaming partners product offering to maintain brand and consumer loyalty.
       </h2>
     </div>
   </div>
@@ -116,7 +116,7 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
     </div>
     <div class="banner-text-left">
       <h1 class="banner-header">Diversification</h1>
-      <h2 class="banner-sub">At Cannabis Wheaton we believe there is strength in numbers.  We invest and support a wide range of cannabis cultivation companies that make up our roster of streaming partners each with a unique offering, based on their individual leadership teams and expertise, and specialized growing techniques and innovations.<br><br>Production is diversified across many streaming partners, reducing the risk associated with build-out delays, licensing delays, poor harvests, etc.  <br><br>Given the reduced production risk, Cannabis Wheaton represents the ideal partner for medical clinics and any other distribution channel.
+      <h2 class="banner-sub">CW represents the ideal partner for medical clinics, pharmacies, government purchasing agencies and other potential distribution channels.
       </h2>
     </div>
   </div>
@@ -127,7 +127,7 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
     </div>
     <div class="banner-text-right">
       <h1 class="banner-header">Upside</h1>
-      <h2 class="banner-sub">Cannabis Wheaton creates an opportunity for investors to invest in a single source and gain the significant upside potential of investing in multiple licensed producers.<br><br>Risk is mitigated through this diversification, value and the expertise of our management team.
+      <h2 class="banner-sub">Cannabis Wheaton creates an opportunity for investors to invest in a single source and gain the significant upside potential of investing in multiple licensed producers.<br><br>Risk is mitigated through this diversification and the added value created by our experienced management team.
       </h2>
     </div>
   </div>
@@ -138,7 +138,7 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
     </div>
     <div class="banner-text-left">
       <h1 class="banner-header">Best Brands</h1>
-      <h2 class="banner-sub">Through our industry relationships, we have access to premiere cannabis brands around the globe looking to enter the Canadian market.<br><br>The Cannabis Wheaton model allows for a completely licensed producer agnostic solution and the flexibility to maximize multiple distribution channels
+      <h2 class="banner-sub">Through our industry relationships, we have access to premiere cannabis brands around the globe looking to enter the Canadian market.<br><br>The Cannabis Wheaton model allows for a completely licensed producer agnostic solution and the flexibility to maximize multiple distribution channels.
       </h2>
     </div>
   </div>
