--- a/team.html
+++ b/team.html
@@ -37,7 +37,7 @@ meta: Our team is comprised of industry first-movers, visionaries and experts, d
       <p class="team-bio">{{member.bio}}</p>
     </div>
   {% endfor %}
-  <h1 class="team-header">Advisory Board</h1>
+  <h1 class="team-header">Strategic Advisors</h1>
   {% for member in site.data.advisors %}
     <div class="team-member">
       <div class="team-photo">
