--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@ meta: Send a message to the Cannabis Wheaton team and we'll be in contact as soo
     <form class="clearfix" method="POST" action="http://formspree.io/info@cannabiswheaton.com">
       <input type="text" name="fullname" placeholder="Your Full Name">
       <input type="email" name="email" placeholder="Your Email Address">
-      <textarea name="message" placeholder="Your Message"></textarea>
+      <textarea maxlength="376" name="message" placeholder="Your Message"></textarea>
       <a href="javascript:void(0)" class="svg-wrapper-two submit-btn">
         <svg height="40" width="130" xmlns="http://www.w3.org/2000/svg">
           <rect class="button-shape" height="40" width="130" />
