--- a/about.html
+++ b/about.html
@@ -38,13 +38,13 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
 
 <section class="graphic about-graphic">
   <div class="small-graphic">
-    <img class="img-flex" src="{{site.baseurl}}/svgs/graphic-mobile.svg" alt="">
+    <img class="img-flex" src="{{site.baseurl}}/svgs/graphic-mobile.svg" alt="Cannabis Wheaton provides: capital for initial build or expansion, contruction management, genetics and cultivation expertise, access to less dilutive funding, brand building expertise, patient growth, as well as legal and financial expertise.">
   </div>
   <div class="med-graphic">
-    <img class="img-flex" src="{{site.baseurl}}/svgs/graphic-tablet.svg" alt="">
+    <img class="img-flex" src="{{site.baseurl}}/svgs/graphic-tablet.svg" alt="Cannabis Wheaton provides: capital for initial build or expansion, contruction management, genetics and cultivation expertise, access to less dilutive funding, brand building expertise, patient growth, as well as legal and financial expertise.">
   </div>
   <div class="large-graphic">
-    <img class="img-flex" src="{{site.baseurl}}/svgs/graphic-desktop.svg" alt="">
+    <img class="img-flex" src="{{site.baseurl}}/svgs/graphic-desktop.svg" alt="Cannabis Wheaton provides: capital for initial build or expansion, contruction management, genetics and cultivation expertise, access to less dilutive funding, brand building expertise, patient growth, as well as legal and financial expertise.">
   </div>
 </section>
 
@@ -101,29 +101,29 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
   <h1 class="about-grid-header">Benefits of the Cannabis Wheaton Model</h1>
   <div class="banner banner-one grid-one">
     <div class="banner-img-left">
-      <img class="gif-one" src="http://cannabiswheaton.co/images/future-positioning.gif" alt="">
+      <img class="gif-one" src="http://cannabiswheaton.co/images/future-positioning.gif" alt="Cannabis Wheaton enables streaming partners to easily enter the cannabis market by leveraging our relationships with existing brands or building new brands and products.">
     </div>
     <div class="banner-text-right">
       <h1 class="banner-header">Future Product Positioning</h1>
-      <h2 class="banner-sub">We empower our streaming partners to better understand and reach the growing cannabis market by leveraging our relationships and brand building expertise to place or create brands and products that resonate with patients.<br><br>As Canada moves towards an adult-use market, Cannabis Wheaton will continually innovate and build our streaming partners product offering to maintain brand and consumer loyalty.
+      <h2 class="banner-sub">We empower our streaming partners to better understand and reach the growing cannabis market by leveraging our relationships and brand building expertise to place or create brands and products that resonate with patients.<br><br>As Canada moves towards an adult-use market, Cannabis Wheaton will continually innovate and build our streaming partners' product offering to maintain brand and consumer loyalty.
       </h2>
     </div>
   </div>
 
   <div class="banner banner-two grid-two">
     <div class="banner-img-right">
-      <img class="gif-two" src="http://cannabiswheaton.co/images/diversification.gif" alt="">
+      <img class="gif-two" src="http://cannabiswheaton.co/images/diversification.gif" alt="Because of our diverse network of distribution channels, Cannabis Wheaton represents the ideal partner for both producers and distributors.">
     </div>
     <div class="banner-text-left">
       <h1 class="banner-header">Diversification</h1>
-      <h2 class="banner-sub">CW represents the ideal partner for medical clinics, pharmacies, government purchasing agencies and other potential distribution channels.
+      <h2 class="banner-sub">Cannabis Wheaton represents the ideal partner for medical clinics, pharmacies, government purchasing agencies and other potential distribution channels.
       </h2>
     </div>
   </div>
 
   <div class="banner banner-one grid-three">
     <div class="banner-img-left">
-      <img class="gif-three" src="http://cannabiswheaton.co/images/upside.gif" alt="">
+      <img class="gif-three" src="http://cannabiswheaton.co/images/upside.gif" alt="Cannabis Wheaton creates significant opportunities for investors by having a large network of licensed producers.">
     </div>
     <div class="banner-text-right">
       <h1 class="banner-header">Upside</h1>
@@ -134,7 +134,7 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
 
   <div class="banner banner-two grid-four">
     <div class="banner-img-right">
-      <img class="gif-four" src="http://cannabiswheaton.co/images/brands.gif" alt="">
+      <img class="gif-four" src="http://cannabiswheaton.co/images/brands.gif" alt="Cannabis Wheaton has a deep network of relationships with the world's top cannabis brands, giving our streaming partners access to a large range of distribution channels.">
     </div>
     <div class="banner-text-left">
       <h1 class="banner-header">Best Brands</h1>
