--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-titleAfter: A true catalyst for change
+titleAfter: A Catalyst for Change
 meta: Cannabis Wheaton is fundamentally shifting two paradigms in the Cannabis space – The traditional investment model and how the industry works together.
 ---
 
