new contact info

--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,12 @@ meta: Send a message to the Cannabis Wheaton team and we'll be in contact as soo
       </a>
       <input type="hidden" name="_next" value="{{site.baseurl}}/thanks" />
     </form>
+    <div class="inquiries">
+      <p class="txt-green">INVESTOR RELATED INQUIRIES</p>
+      <p class="inquiries-list">T: 604 667 7130</p>
+      <p class="inquiries-list">E: Mario@skanderbegcapital.com</p>
+      <p class="inquiries-list">W: skanderbegcapital.com</p>
+    </div>
   </div>
 
   <div class="video-dots">
