--- a/team.html
+++ b/team.html
@@ -18,7 +18,7 @@ meta: Our team is comprised of industry first-movers, visionaries and experts, d
         <source src="http://cannabiswheaton.co/images/bg-vid.mp4">
     </video>
   </div>
-  <a class="down-arrow" href="#smooth" id="smooth">
+  <a class="scroll-arrow" href="#smooth" id="smooth">
     <svg class="arrow">
       <path class="a1" d="M0 40 L30 72 L60 40"></path>
     </svg>
