text edits, new map

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@ meta: Send a message to the Cannabis Wheaton team and we'll be in contact as soo
 ---
 <section class="bg-video clearfix contact">
   <div class="video-text-overlay text-center">
-    <h1 class="hero-header">Contact Us</h1>
+    <h1 class="hero-header way">Contact Us</h1>
     <form class="clearfix" method="POST" action="http://formspree.io/jeff@cannabiswheaton.com">
       <div class="form-group">
         <label for="formname">Your Full Name</label>
@@ -30,9 +30,9 @@ meta: Send a message to the Cannabis Wheaton team and we'll be in contact as soo
     </form>
     <div class="inquiries">
       <p class="txt-green">INVESTOR RELATED INQUIRIES</p>
-      <p class="inquiries-list">T: 604 667 7130</p>
-      <p class="inquiries-list">E: Mario@skanderbegcapital.com</p>
-      <p class="inquiries-list">W: skanderbegcapital.com</p>
+      <p class="inquiries-list">604 667 7130</p>
+      <p class="inquiries-list">mario@skanderbegcapital.com</p>
+      <p class="inquiries-list">skanderbegcapital.com</p>
     </div>
   </div>
 
