lil margin editerinos

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@ meta: Send a message to the Cannabis Wheaton team and we'll be in contact as soo
       <input type="hidden" name="_next" value="{{site.baseurl}}/thanks" />
     </form>
     <div class="inquiries">
-      <p class="txt-green">INVESTOR RELATED INQUIRIES</p>
+      <p class="txt-green">INVESTOR RELATIONS</p>
       <p class="inquiries-list">604 667 7130</p>
       <p class="inquiries-list">mario@skanderbegcapital.com</p>
       <p class="inquiries-list">skanderbegcapital.com</p>
