asterisk section numbers

--- a/about.html
+++ b/about.html
@@ -89,11 +89,12 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
 
     <div class="count footage-count">
       <h1 class="number-counter">1.3M<span class="superscript">+</span></h1>
-      <p class="number-context">Square feet of cultivation by 2019</p>
+      <p class="number-context">Square feet of cultivation by 2019**</p>
       <svg class="underline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31.33 1">
         <path fill="none" stroke="#a6c09a" stroke-miterlimit="10" d="M0 .5h31.33" data-name="Layer 1"/>
       </svg>
     </div>
+    <p class="number-aster">**Equivalent square feet of cannabis cultivation and production capacity net to Cannabis Wheaton by the end of 2019, according to industry recognized production averages.</p>
   </div>
 </section>
 
