new bios and ticker name change

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: About Us
+titleAfter: The World’s First Cannabis Streaming Company
 meta: Cannabis Wheaton is the first cannabis streaming company. We provide a platform for growth so our partners can focus on innovation.
 ---
 <section class="bg-video clearfix">
