--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-titleAfter: A Catalyst for Change
+titleAfter: The World’s First Cannabis Streaming Company
 meta: Cannabis Wheaton is fundamentally shifting two paradigms in the Cannabis space – The traditional investment model and how the industry works together.
 ---
 
