--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Contact Us
+titleAfter: The World’s First Cannabis Streaming Company
 meta: Send a message to the Cannabis Wheaton team and we'll be in contact as soon as possible.
 ---
 <section class="bg-video clearfix contact">
