diversification text edit, robots.txt fix sitemap link

--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
     </div>
     <div class="banner-text-left">
       <h1 class="banner-header">Diversification</h1>
-      <h2 class="banner-sub">Cannabis Wheaton represents the ideal partner for medical clinics, pharmacies, government purchasing agencies and other potential distribution channels.
+      <h2 class="banner-sub">We believe there is strength in numbers. We invest and support a wide range of cannabis cultivation companies that make up our roster of streaming partners each with a unique offering, based on their individual leadership teams and expertise, and specialized growing techniques and innovations.<br><br>Production is diversified across many streaming partners, reducing the potential risk associated with build-out delays, licensing delays, or cultivation challenges.
       </h2>
     </div>
   </div>
