--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
         <path fill="none" stroke="#a6c09a" stroke-miterlimit="10" d="M0 .5h31.33" data-name="Layer 1"/>
       </svg>
     </div>
-    <p class="number-aster">**Equivalent square feet of cannabis cultivation and production capacity net to Cannabis Wheaton by the end of 2019, according to industry recognized production averages.</p>
+    <p class="number-aster">**Effective Square Feet is calculated is by taking the physical square footage and multiplying by a factor based on the expected productivity of the facility versus the industry average. The industry average we have used is 100 grams produced annually per square foot.</p>
   </div>
 </section>
 
