--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@ meta: Send a message to the Cannabis Wheaton team and we'll be in contact as soo
         <label for="formemail">Your Email Address</label>
         <input type="email" name="email" id="formemail">
         <input type="hidden" name="_cc" value="ian@cannabiswheaton.com" />
+        <input type="hidden" name="_cc" value="mike@cannabiswheaton.com" />
       </div>
       <div class="form-group form-text">
         <label for="formmsg">Your Message</label>
@@ -31,7 +32,7 @@ meta: Send a message to the Cannabis Wheaton team and we'll be in contact as soo
     </form>
     <div class="inquiries">
       <p class="txt-green">INVESTOR RELATIONS</p>
-      <p class="inquiries-list">604 667 7130</p>
+      <p class="inquiries-list">604 687 7130</p>
       <p class="inquiries-list">mario@skanderbegcapital.com</p>
       <p class="inquiries-list">skanderbegcapital.com</p>
     </div>
