footer redesign- remove investor relations

--- a/investors.html
+++ b/investors.html
@@ -4,44 +4,25 @@ title: Investors
 titlaAfter: The World’s First Cannabis Streaming Company
 meta:
 ---
-<section class="bg-video clearfix">
-  <div class="video-text-overlay text-center">
-    <h1 class="hero-header way">"The investor of today does not profit from yesterday's growth."</h1>
-    <h2 class="hero-sub">Warren Buffett</h2>
-  </div>
-
-  <div class="video-dots">
-  </div>
-
-  <div class="fullscreen-bg">
-    <video autoplay='true' loop='true' muted='true' loop muted autoplay poster="http://cannabiswheaton.co/images/poster.jpg" class="fullscreen-bg__video">
-        <source src="http://cannabiswheaton.co/images/bg-vid.mp4">
-    </video>
-  </div>
-  <a class="scroll-arrow" href="#smooth" id="smooth">
-    <svg class="arrow">
-      <path class="a1" d="M0 40 L30 72 L60 40"></path>
-    </svg>
-  </a>
-</section>
-
-<section class="investor-deck">
-  <a class="" href="http://cannabiswheaton.co/images/CW_Deck_May_WS-2.pdf">
-    <div class="text-section">
-      <div class="para-box">
-        <h2 class="para-header-alt">
-          View Investor Deck
-        </h2>
-      </div>
+<div class="investor-page way">
+  <section class="bg-video clearfix">
+    <div class="video-text-overlay text-center">
+      <h1 class="hero-header">"The investor of today does not profit from yesterday's growth."</h1>
+      <h2 class="hero-sub">Warren Buffett</h2>
     </div>
-  </a>
-</section>
+  </section>
 
-<section class="pre-footer">
-  <div class="investor-relations">
-    <p>INVESTOR RELATIONS</p>
-    <p>604 687 7130</p>
-    <p><a class="footer-link" href="mailto:mario@skanderbegcapital.com">mario@skanderbegcapital.com</a></p>
-    <p><a class="footer-link" href="http://skanderbegcapital.com">skanderbegcapital.com</a></p>
-  </div>
-</section>
+  <a class="deck-link" href="http://cannabiswheaton.co/images/CW_Deck_May_WS-2.pdf">
+    <img src="http://cannabiswheaton.co/images/cw-website-investors.jpg" alt="view the deck for investors">
+    <h2>View Presentation</h2>
+  </a>
+
+  <section class="pre-footer">
+    <div class="investor-relations">
+      <p>INVESTOR RELATIONS</p>
+      <p>604 687 7130</p>
+      <p><a class="footer-link" href="mailto:mario@skanderbegcapital.com">mario@skanderbegcapital.com</a></p>
+      <p><a class="footer-link" href="http://skanderbegcapital.com">skanderbegcapital.com</a></p>
+    </div>
+  </section>
+</div>
