content added to news page

--- a/news.html
+++ b/news.html
@@ -16,7 +16,7 @@ meta:
   <div class="article-list">
     <h2 class="list-header">Latest Press</h2>
     <ul>
-      {% for article in site.data.press %}
+      {% for article in site.data.newsreleases %}
         <li>
           <p class="article-small">{{article.date}}</p>
           <p class="article-small">{{article.source}}</p>
