media contact info

--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@ meta:
 
 <div class="subpage-body wrapper">
   <div class="article-list">
-    <h2 class="list-header">Latest Press</h2>
+    <h2 class="subpage-text-header">Latest Press</h2>
     <ul>
       {% for article in site.data.newsreleases %}
         <li>
@@ -31,7 +31,7 @@ meta:
   </div>
 
   <div class="article-list">
-    <h2 class="list-header">Latest News Releases</h2>
+    <h2 class="subpage-text-header">Latest News Releases</h2>
     <ul>
       {% for article in site.data.press %}
         <li>
@@ -45,5 +45,11 @@ meta:
         </li>
       {% endfor %}
     </ul>
+  </div>
+
+  <div class="media-contact">
+    <h2 class="subpage-text-header">Media Contact</h2>
+    <p class="article-large">Members of the media who require more information about Cannabis Wheaton or would like to interview a CW representative, please contact:</p>
+    <p class="article-large">Sarah Bain <a href="mailto:mario@skanderbegcapital.com">sarah@nesta.co</a></p>
   </div>
 </div>
