--- a/investors.html
+++ b/investors.html
@@ -5,12 +5,12 @@ titlaAfter: The World’s First Cannabis Streaming Company
 meta:
 ---
 <div class="investor-page way">
-  <section class="bg-video clearfix">
-    <div class="video-text-overlay text-center">
-      <h1 class="hero-header">"The investor of today does not profit from yesterday's growth."</h1>
-      <h2 class="hero-sub">Warren Buffett</h2>
+  <div class="subpage-header para-box">
+    <h1 class="para-header-alt">"The investor of today does not profit from yesterday's growth."</h1>
+    <div class="para-body">
+      <p class="pad-b">Warren Buffett</p>
     </div>
-  </section>
+  </div>
 
   <a class="deck-link" href="http://cannabiswheaton.co/images/CW_Deck_May_WS.pdf">
     <img src="http://cannabiswheaton.co/images/cw-website-investors.jpg" alt="view the deck for investors">
