--- a/investors.html
+++ b/investors.html
@@ -12,7 +12,7 @@ meta:
     </div>
   </div>
 
-  <a class="deck-link" href="http://cannabiswheaton.co/images/CW_Deck_May_WS.pdf">
+  <a class="deck-link" href="http://cannabiswheaton.co/images/CW_Deck_May30.pdf">
     <img src="http://cannabiswheaton.co/images/cw-website-investors.jpg" alt="view the deck for investors">
     <h2>View Presentation</h2>
   </a>
