combine news and investors pages

--- a/team.html
+++ b/team.html
@@ -5,7 +5,7 @@ titleAfter: The World’s First Cannabis Streaming Company
 meta: Our team is comprised of industry first-movers, visionaries and experts, dedicated to creating value for our partners and the cannabis industry.
 ---
 
-<div class="subpage-header para-box">
+<div class="subpage-header para-box way">
   <h1 class="para-header-alt">A dedicated team for growth</h1>
   <div class="para-body">
     <p class="pad-b">Our management team is comprised of industry first-movers, visionaries and experts, dedicated to creating value for our partners and the cannabis industry.</p>
