--- a/investors.html
+++ b/investors.html
@@ -12,17 +12,64 @@ meta:
     </div>
   </div>
 
-  <a class="deck-link" href="http://cannabiswheaton.co/images/CW_Deck_May30.pdf">
+  <a class="deck-link" href="http://cannabiswheaton.co/images/CW_Deck_June.pdf">
     <img src="http://cannabiswheaton.co/images/cw-website-investors.jpg" alt="view the deck for investors">
     <h2>View Presentation</h2>
   </a>
-
-  <section class="pre-footer">
-    <div class="investor-relations">
-      <p>INVESTOR RELATIONS</p>
-      <p>604 687 7130</p>
-      <p><a class="footer-link" href="mailto:mario@skanderbegcapital.com">mario@skanderbegcapital.com</a></p>
-      <p><a class="footer-link" href="http://skanderbegcapital.com">skanderbegcapital.com</a></p>
-    </div>
-  </section>
 </div>
+
+<div class="news-page">
+  <h1 class="para-header-alt">Press and News Releases</h1>
+
+  <div class="subpage-body wrapper">
+    <div class="article-list">
+      <h2 class="subpage-text-header">Latest Press</h2>
+      <ul>
+        {% for article in site.data.press %}
+          <li>
+            <p class="article-small">{{article.date}}</p>
+            <p class="article-small">{{article.source}}</p>
+            <p class="article-large">
+              <a href="{{article.link}}">{{article.headline}}</a>
+            </p>
+            <p class="article-med">{{article.subhead}}</p>
+            <a class="article-link text-green" href="{{article.link}}">Read Article</a>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+
+    <div class="article-list">
+      <h2 class="subpage-text-header">Latest News Releases</h2>
+      <ul>
+        {% for article in site.data.releases %}
+          <li>
+            <p class="article-small">{{article.date}}</p>
+            <p class="article-small">{{article.source}}</p>
+            <p class="article-large">
+              <a href="{{article.link}}">{{article.headline}}</a>
+            </p>
+            <p class="article-med">{{article.subhead}}</p>
+            <a class="article-link text-green" href="{{article.link}}">Read Article</a>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
+</div>
+
+<section class="pre-footer wrapper">
+  <h2 class="pre-footer-header">Key Contacts</h2>
+  <div class="key-contact">
+    <h2 class="subpage-text-header">Investors</h2>
+    <p class="article-large">604 687 7130</p>
+    <p class="article-large"><a href="mailto:mario@skanderbegcapital.com">mario@skanderbegcapital.com</a></p>
+    <p class="article-large"><a href="http://skanderbegcapital.com">skanderbegcapital.com</a></p>
+  </div>
+
+  <div class="key-contact">
+    <h2 class="subpage-text-header">Media</h2>
+    <p class="article-large">Members of the media who require more information about Cannabis Wheaton or would like to interview a CW representative, please contact:</p>
+    <p class="article-large">Sarah Bain <a href="mailto:mario@skanderbegcapital.com">sarah@nesta.co</a></p>
+  </div>
+</section>
