--- a/investors.html
+++ b/investors.html
@@ -1,14 +1,14 @@
 ---
 layout: invest
-title: Investors
-titlaAfter: The World’s First Cannabis Streaming Company
+title: Investors & News
+titleAfter: The World’s First Cannabis Streaming Company
 meta:
 ---
 <div class="investor-page way">
   <div class="subpage-header para-box">
     <h1 class="para-header-alt">"The investor of today does not profit from yesterday's growth."</h1>
     <div class="para-body">
-      <p class="pad-b">Warren Buffett</p>
+      <p>Warren Buffett</p>
     </div>
   </div>
 
@@ -19,7 +19,11 @@ meta:
 </div>
 
 <div class="news-page">
-  <h1 class="para-header-alt">Press and News Releases</h1>
+  <div class="subpage-subheader para-box">
+    <h1 class="para-header-alt">Press and News Releases</h1>
+    <div class="para-body">
+    </div>
+  </div>
 
   <div class="subpage-body wrapper">
     <div class="article-list">
