--- a/about.html
+++ b/about.html
@@ -5,12 +5,33 @@ titleAfter: The World’s First Cannabis Streaming Company
 meta: Cannabis Wheaton is the first cannabis streaming company. We provide a platform for growth so our partners can focus on innovation.
 ---
 
-<div class="subpage-header para-box way">
+<!--<div class="subpage-header para-box way">
   <h1 class="para-header-alt">A Catalyst for Change</h1>
   <div class="para-body">
     <p class="pad-b">The model is simple: We provide funding for facility expansions, operations and initial construction in exchange for minority equity interests and a portion of the cultivation production. We provide the platform for growth so our partners can focus on innovation.</p>
   </div>
-</div>
+</div>-->
+<section class="bg-video clearfix">
+  <div class="video-text-overlay text-center">
+    <h1 class="hero-header way">A Catalyst for Change</h1>
+    <h2 class="hero-sub">The model is simple: We provide funding for facility expansions, operations and initial construction in exchange for minority equity interests and a portion of the cultivation production. We provide the platform for growth so our partners can focus on innovation.
+    </h2>
+  </div>
+
+  <div class="video-dots">
+  </div>
+
+  <div class="fullscreen-bg">
+    <video autoplay='true' loop='true' muted='true' muted loop autoplay poster="http://cannabiswheaton.co/images/poster.jpg" class="fullscreen-bg__video">
+        <source src="http://cannabiswheaton.co/images/bg-vid.mp4">
+    </video>
+  </div>
+  <a class="scroll-arrow" href="#smooth" id="smooth">
+    <svg class="arrow">
+      <path class="a1" d="M0 40 L30 72 L60 40"></path>
+    </svg>
+  </a>
+</section>
 
 <section class="text-section">
   <div class="para-box">
