--- a/investors.html
+++ b/investors.html
@@ -65,7 +65,7 @@ meta:
 <section class="pre-footer wrapper">
   <h2 class="pre-footer-header">Key Contacts</h2>
   <div class="key-contact">
-    <h2 class="subpage-text-header">Investors</h2>
+    <h2 class="subpage-text-header">Investor Relations</h2>
     <p class="article-large">604 687 7130</p>
     <p class="article-large"><a href="mailto:mario@skanderbegcapital.com">mario@skanderbegcapital.com</a></p>
     <p class="article-large"><a href="http://skanderbegcapital.com">skanderbegcapital.com</a></p>
@@ -74,6 +74,6 @@ meta:
   <div class="key-contact">
     <h2 class="subpage-text-header">Media</h2>
     <p class="article-large">Members of the media who require more information about Cannabis Wheaton or would like to interview a CW representative, please contact:</p>
-    <p class="article-large">Sarah Bain <a href="mailto:mario@skanderbegcapital.com">sarah@nesta.co</a></p>
+    <p class="article-large">Sarah Bain <a href="mailto:sarah@cannabiswheaton.com">sarah@nesta.co</a></p>
   </div>
 </section>
